--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+body{
+  font-family: Roboto;
+}
 
 #playercard {
   border-width: 1px;
@@ -113,4 +116,16 @@
 
 #mainpagebackground {
   background-image: url("images/wowbackground.png");
+  background-repeat: no-repeat;
+}
+
+.text-responsive {
+  font-size: calc(100% + 1.5vw + 1.5vh);
+}
+.text-responsivebig {
+  font-size: calc(100% + 2vw + 2vh);
+}
+
+.text-shadow{
+  text-shadow: 2px 2px 2px #000;
 }
