--- a/styles.css
+++ b/styles.css
@@ -68,13 +68,13 @@ body{
 }
 
 #grad1 {
-  height: 100vh;
+  height: 100%;
   background-color: rgb(
     148,
     41,
     168
   ); /* For browsers that do not support gradients */
-  background-image: linear-gradient(rgb(148, 41, 168), rgb(11, 11, 22));
+  background-image: linear-gradient(rgb(48, 48, 48), rgb(0, 0, 0));
 }
 #grad2 {
   background-image: -moz-linear-gradient(
@@ -92,8 +92,8 @@ body{
     rgb(105, 4, 139) 0%,
     rgb(248, 162, 57) 100%
   );
-
-  height: 100vh;
+  min-height: 100vh;
+  height: 100%;
 }
 #navgrad {
   background-image: -moz-linear-gradient(
