--- a/styles.css
+++ b/styles.css
@@ -205,3 +205,12 @@ background: linear-gradient(90deg, rgba(249,163,56,1) 21%, rgba(129,18,137,1) 85
  
   }
 }
+
+
+#about-us-image {
+  background-image: url("svgs/about_us.svg");
+  background-repeat: no-repeat;
+  object-fit: contain;
+  background-position: center center;
+}
+
