new small gradient

--- a/styles.css
+++ b/styles.css
@@ -214,3 +214,10 @@ background: linear-gradient(90deg, rgba(249,163,56,1) 21%, rgba(129,18,137,1) 85
   background-position: center center;
 }
 
+.title {
+  background-image: url('images/brightnew.gif');
+  background-size: cover;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color:  transparent;
+}
