removed old files

--- a/styles.css
+++ b/styles.css
@@ -212,5 +212,6 @@ background: linear-gradient(90deg, rgba(249,163,56,1) 21%, rgba(129,18,137,1) 85
   background-repeat: no-repeat;
   object-fit: contain;
   background-position: center center;
+  min-width: 800px;
 }
 
