--- a/styles.css
+++ b/styles.css
@@ -207,21 +207,24 @@ background: linear-gradient(90deg, rgba(249,163,56,1) 21%, rgba(129,18,137,1) 85
 }
 
 
-@media (max-width: 500px) {
+@media (max-width: 680px) {
   .joemama {
-    height: 50vh;
+    height: 95vh;
   }
     
   }
 
-  @media (min-width: 501px) {
-    .joemama2 {
-      height: 116vh;
-    }
-      
-    }
+@media (min-width: 681px) {
+  .joemama2 {
+    height: 100vh;
+  }
+    
+  }
 
-
+.vcenter-item{
+  display: flex;
+  align-items: center;
+}
 
 #about-us-image {
   background-image: url("images/BACKGROUND.png");
